# ibus-mcbopomofo

./: .gitmodules  LICENSE  README.md  meson.build  meson_options.txt
data/: copy_from_upstream.sh  ibus-setup-mcbopomofo.desktop.in  mcbopomofo.xml.in  meson.build  org.freedesktop.IBus.McBopomofo.gschema.xml.in  org.openVanilla.McBopomofo.gschema.xml.in
po/: POTFILES.in  meson.build
src/: bus_watcher.vala  config.h.in  engine.vala  main.vala  mcbpmf_api.vapi  meson.build  prop_manager.vala
